Criando requisição para busca de uma pelada no serviço Driblô Co-authored-by: matheus-rn <matheus.1nascimento58@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,9 @@ services:
       - "8000:8000"
     volumes:
       - .:/usr/app
+    networks:
+      - api-backend
+networks:
+  api-backend:
+    external:
+      name: api-backend    
