--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sucrase": "^3.10.1"
   }
 }
